# PureWebScan

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  start.py  start.sh
backend/: __init__.py
backend/api/: __init__.py  result.py  rule.py  task.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/core/: __init__.py  scanner.py
backend/core/probes/: http_probe.py
backend/core/wappalyzer/: parser.py  runner.py
backend/models/: __init__.py  config.py  result.py  rule.py  task.py
backend/schemas/: schemas.py
frontend/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  env.d.ts
frontend/src/api/: index.ts
frontend/src/components/: Navbar.vue  ResultTable.vue  RuleList.vue  ScanForm.vue  Sidebar.vue
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/styles/: main.scss
frontend/src/views/: Dashboard.vue  ResultDetail.vue  Results.vue  Rules.vue  Scan.vue  __init__.py
